eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    kubernetes.io/ingress.class: nginx #harus sama dengan metadata IngressClass
    cert-manager.io/cluster-issuer: letsencrypt #harus sama dengan metadata letsencrypt
spec:
  ingressClassName: nginx #harus sama dengan metadata IngressClass
  rules:
  - host: "api.simplebink.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.simplebink.net
    secretName: simple-bank-api-cert
